# incremental-parsing

./: Cargo.toml  README.md  THIRD-PARTY.md  mypy.ini  pyproject.toml  requirements.txt
grammars/: calculator.lark  python.lark
incremental_parsing/evaluation/: evaluate_stack.py  gen_tables.sql  text_cuts.py
incremental_parsing/generation/: constrained_generation.py  lex_earley_worker.py  logits_processor.py  probability_trie.py  stack_completion_right_context.py  utils.py
incremental_parsing/lex_earley/: earley_base.py  earley_nfa.py  earley_trie.py  incremental_pattern.py  lark_grammar.py  lex_earley.py  lexer.py  middle_earley.py  native_earley_nfa.py  native_earley_trie.py  python_lex_wrapper.py  simple_bnf.py  test.py
incremental_parsing/lex_earley/branch_guard/: banned_regex_set.py  combined_guard.py  lexer_branch_guard.py  single_char_banned_regex_set.py
incremental_parsing/regex_ixes/: regex_compile.py  regex_nfa.py  regex_parse.py  regex_tree.py
incremental_parsing/utils/: flags_to_regex_flags.py  indexable_container.py  lookback_trie.py  simple_nfa.py
notebooks/: create_figures.ipynb  create_parse_hierarchy_viz_calc_lang.ipynb  create_parse_hierarchy_viz_python.ipynb  example_parsing.ipynb  interactive_constrained_generation.ipynb  interactive_recognition.py  paper_examples.ipynb  timing_graphs.ipynb
scripts/: constrained_generation_nice_cuts.sh  constrained_generation_random_cuts.sh
src/: bridge.rs  grammar.rs  lib.rs  parser.rs
src/bridge/: bnf.rs  charts.rs
src/grammar/: bnf.rs  names.rs
src/parser/: earley.rs
